[package]
name = "adv_linalg_proc_macro"
version = "0.1.0"
edition = "2021"
authors = ["Eric Ovenden <eric2ovenden@gmail.com>"]

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["procedral macros", "proc", "macro"]

description = "Procedral macros for usage within Adv_LinAlg_Lib"
documentation = "https://docs.rs/adv_linalg_proc_macro"

license = "MIT OR Apache-2.0"
license-file = "LICENSE.md"
include = [
    "/src",
    "LICENSE.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version="2.0", features=["full", "extra-traits"] }
quote = "1.0"
