[package]
name = "adv_linalg_proc_macro"
version = "0.2.0"
edition = "2021"
authors = ["Eric Ovenden <eric2ovenden@gmail.com>"]

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["procedural", "proc", "macro"]

description = "Procedral macros for usage within Adv_LinAlg_Lib"
documentation = "https://docs.rs/adv_linalg_proc_macro"
repository = "https://github.com/Adv-LinAlg/adv_linalg_proc_macro"

license = "MIT OR Apache-2.0"
include = [
    "/src",
    "LICENSE.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
venial = "0.5.0"
quote = "1.0"
